--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
             <div class="row r1 align-items-center justify-content-between ">
                 <div class="col-xl-4">
                     <nav>
-                        <a href=""><i class="fas fa-play"></i> Играть</a>
+                        <a href="index.html"><i class="fas fa-play"></i> Играть</a>
                         <a href=""><i class="fas fa-shopping-bag"></i> Магазин</a>
-                        <a href=""><i class="fas fa-crown"></i> VIP</a>
+                        <a href="vip.html"><i class="fas fa-crown"></i> VIP</a>
                         <a href=""><i class="fas fa-newspaper"></i> Новости</a>
                     </nav>
                 </div>
                 <div class="col-xl-3">
                     <a href=" #"><img src="./assets/logo.png" id="logo" alt="logo"></a>
                 </div>
-                <div class="col-xl-2 ">
+                <div class="col-xl-push-2 ">
                     <a id="auth" href=" #">ВОЙТИ ЧЕРЕЗ STEAM <i class="fab fa-steam"></i></a>
                 </div>
             </div>
         </div>
     </header>
-    <section id="main">
+    <section class="main">
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center ">
                 <div class="col-xl-6 ">
