--- a/index.html
+++ b/index.html
@@ -12,19 +12,25 @@
     <header>
         <div class="container-fluid">
             <div class="row r1 align-items-center justify-content-between ">
-                <div class="col-xl-4">
+                <div class="col-xl-3">
                     <nav>
                         <a href="index.html"><i class="fas fa-play"></i> Играть</a>
-                        <a href=""><i class="fas fa-shopping-bag"></i> Магазин</a>
+                        <a href="shop.html"><i class="fas fa-shopping-bag"></i> Магазин</a>
                         <a href="vip.html"><i class="fas fa-crown"></i> VIP</a>
-                        <a href=""><i class="fas fa-newspaper"></i> Новости</a>
+                        <!-- <a href=""><i class="fas fa-newspaper"></i> Новости</a> -->
                     </nav>
                 </div>
                 <div class="col-xl-3">
                     <a href=" #"><img src="./assets/logo.png" id="logo" alt="logo"></a>
                 </div>
-                <div class="col-xl-push-2 ">
-                    <a id="auth" href=" #">ВОЙТИ ЧЕРЕЗ STEAM <i class="fab fa-steam"></i></a>
+                <div class="col-xl-push-2">
+                    <!-- <a id="auth" href=" #">ВОЙТИ ЧЕРЕЗ STEAM <i class="fab fa-steam"></i></a> -->
+                    <div id="profile">
+                    <i class="pric">69 <img src="./assets/coal-money.svg"></img></i>
+                    <a id="add" href=""><i class="fas fa-plus-square"></i></a>
+                    <img id="picu" src="./assets/logo.png" class="rounded" alt="Cinque Terre">
+                    <a id="logout" href=""><i class="fas fa-sign-out-alt"></i></a>
+                </div>
                 </div>
             </div>
         </div>
@@ -32,7 +38,7 @@
     <section class="main">
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center ">
-                <div class="col-xl-6 ">
+                <div class="col-xl-6">
                     <video width="320" height="240" controls>
                         <source src="movie.mp4" type="video/mp4">
                         Your browser does not support the video tag
@@ -115,7 +121,7 @@
                         </div>
                     </div>
                     </div>
-                    <div class="row ">
+                    <div class="row ent">
                         <div class="col-xl-3 offset-xl-3">
                             <div class="coment">
                                 <p class="come-1">Шоковка</p>
